IMP: (9/11/10, DN) Move getJarLocation from Launcher to Main.
git-svn-id: https://svn.java.net/svn/electric~svn/trunk@11914 b64ed6c1-75a8-e629-b1da-d0dae74a743a